--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src = "https://www.britannica.com/animal/dog" alt = "This is a dog">
+	<img src = "file:///C:/Users/Vikas%20Yadav/Desktop/JAVA%20fx%20copy/SupplyChainNew/src/images/German-shepherd.webp" alt = "This is a dog">
     <script type="text/javascript" src="./script.js">
 </script>
 
