--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src = "https://www.shutterstock.com/image-photo/communication-technology-internet-business-global-world-1421446100" alt = "This is a dog">
+	<img src = "https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt = "This is a dog">
     <script type="text/javascript" src="./script.js">
 </script>
 
